re PR debug/47881 (-fcompare-debug failure (length) with -O -fno-dce -funroll-loops -fno-web)

PR debug/47881
	* ira.c (ira): Call df_analyze again if delete_trivially_dead_insns
	removed anything.

	* gcc.dg/pr47881.c: New test.

From-SVN: r170780